2005-03-26  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-25  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-15  Kjartan Maraas  <kmaraas@gnome.org>

	* weather.c: (weather_location_free): Free location->coordinates
	too. Closes bug #169827 (and a 100kb+ leak)

2005-03-07  Shaun McCance  <shaunm@gnome.org>

	* gweather/docs/C/gweather.xml:
	- Fixed validity issue, removed version from title

2005-03-07  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/gweather.xml: Update documentation for GNOME 2.10.

	* docs/C/figures/*.png: New images, actually from a version of GNOME
	beginning with a 2.

2005-03-06  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-06  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.
	Also reverted the previous change, so that the capital of
	Denmark is now known as Copenhagen again. Locations in
	Locations.xml.in are supposed to have their English names.

2005-03-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* Locations.xml.in: Renamed Copenhagen to København.

2005-03-01  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-01  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-dialog.c: (get_system_monospace_font): Mark as static